--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -42,8 +42,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="500px"
-            src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-1.webp"
-            alt="refrigerator repair cost"
+            src="/img-price/freezer-repair-cost/13456.webp"
+            alt="Freezer repair cost near me"
           />
 
           <Contactbtn />
@@ -98,8 +98,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/img-price/refrigerator-repair-cost/free-refrigerator-repair-estimates-2.webp"
-              alt="Free refrigerator repair estimates"
+              src="/img-price/freezer-repair-cost/24556.webp"
+              alt="Freezer replacement parts cost"
             />
           </div>
         </div>
@@ -328,8 +328,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="600px"
             height="500px"
-            src="/img-price/refrigerator-repair-cost/refrigerator-repair-labor-cost-3.webp"
-            alt="refrigerator repair labor cost"
+            src="/img-price/freezer-repair-cost/34566.webp"
+            alt="Freezer Repair Cost Los Angeles"
           />
         </div>
 
@@ -502,10 +502,10 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy_foto-b">
           <img
             loading="lazy"
-            width="500px"
+            width="600px"
             height="500px"
-            src="/img-price/refrigerator-repair-cost/refrigerator-repair-maintenance-cost-4.webp"
-            alt="refrigerator repair maintenance cost"
+            src="/img-price/freezer-repair-cost/44556.webp"
+            alt="Cost of freezer repair near me"
           />
         </div>
       </div>
@@ -603,8 +603,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="600px"
             height="500px"
-            src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-near-me-5.webp"
-            alt="Refrigerator repair cost near me"
+            src="/img-price/freezer-repair-cost/55665.webp"
+            alt="Urgent freezer repair"
           />
         </div>
 
@@ -1545,14 +1545,34 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-        Common issues in freezer repair include excessive frost buildup, malfunctioning ice makers, and failures in the defrost motor or control panel. The cost to repair these issues can vary depending on the type of freezer—upright freezers, chest freezers, and portable freezers each have unique components and configurations that might influence repair strategies and costs. For instance, an upright freezer might require more expensive repairs due to their complex shelving and electrical control mechanisms.
+          Common issues in freezer repair include excessive frost buildup,
+          malfunctioning ice makers, and failures in the defrost motor or
+          control panel. The cost to repair these issues can vary depending on
+          the type of freezer—upright freezers, chest freezers, and portable
+          freezers each have unique components and configurations that might
+          influence repair strategies and costs. For instance, an upright
+          freezer might require more expensive repairs due to their complex
+          shelving and electrical control mechanisms.
         </p>
-        <p>The average repair costs for freezers generally depend on the specific problem and the local cost of appliance repair technicians. A service call typically includes a diagnostic fee, which covers the initial assessment of the problem. For major issues like compressor replacement, the costs can be quite high, potentially making replacement a more viable option, especially if the freezer is older or out of warranty. It's useful to compare these repair costs with refrigerator repair costs, as they can sometimes overlap, especially in units with combined fridge-freezer functions.</p>
+        <p>
+          The average repair costs for freezers generally depend on the specific
+          problem and the local cost of appliance repair technicians. A service
+          call typically includes a diagnostic fee, which covers the initial
+          assessment of the problem. For major issues like compressor
+          replacement, the costs can be quite high, potentially making
+          replacement a more viable option, especially if the freezer is older
+          or out of warranty. It's useful to compare these repair costs with
+          refrigerator repair costs, as they can sometimes overlap, especially
+          in units with combined fridge-freezer functions.
+        </p>
       </div>
 
       <div class="FAQ">
         <div class="fa">
-          <h3>When should I consider replacing my freezer instead of repairing it, and how do home warranties impact this decision?</h3>
+          <h3>
+            When should I consider replacing my freezer instead of repairing it,
+            and how do home warranties impact this decision?
+          </h3>
         </div>
 
         <div class="fa_plus">︾</div>
@@ -1562,15 +1582,39 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-        Deciding whether to repair or replace a freezer often depends on the cost of repairs relative to the price of a new refrigerator or freezer. Expensive repairs such as compressor replacement or fixing a faulty control panel can make purchasing a new appliance more cost-effective, particularly if the current unit is nearing the end of its manufacturer's warranty or has required multiple costly repairs in the past.
+          Deciding whether to repair or replace a freezer often depends on the
+          cost of repairs relative to the price of a new refrigerator or
+          freezer. Expensive repairs such as compressor replacement or fixing a
+          faulty control panel can make purchasing a new appliance more
+          cost-effective, particularly if the current unit is nearing the end of
+          its manufacturer's warranty or has required multiple costly repairs in
+          the past.
         </p>
-        <p>Warranties can significantly impact this decision. If your freezer is covered under a home warranty, some or all of the repair costs might be covered, making repairs more economically feasible. A home warranty typically covers essential appliances like freezers, and this coverage can mitigate the financial burden of appliance repair. Always check the terms of your home warranty to understand what is covered and any potential limits on coverage.</p>
-        <p>In both scenarios, it’s important to weigh the average repair cost against the replacement costs. If your appliance repair technicians charge high fees or if the freezer has recurrent issues, it might be more sensible to invest in a new, more reliable model. Always consider the efficiency, features, and warranty options of new freezer ranges before making a final decision.</p>
+        <p>
+          Warranties can significantly impact this decision. If your freezer is
+          covered under a home warranty, some or all of the repair costs might
+          be covered, making repairs more economically feasible. A home warranty
+          typically covers essential appliances like freezers, and this coverage
+          can mitigate the financial burden of appliance repair. Always check
+          the terms of your home warranty to understand what is covered and any
+          potential limits on coverage.
+        </p>
+        <p>
+          In both scenarios, it’s important to weigh the average repair cost
+          against the replacement costs. If your appliance repair technicians
+          charge high fees or if the freezer has recurrent issues, it might be
+          more sensible to invest in a new, more reliable model. Always consider
+          the efficiency, features, and warranty options of new freezer ranges
+          before making a final decision.
+        </p>
       </div>
 
       <div class="FAQ">
         <div class="fa">
-          <h3>What are some signs that indicate a need for immediate freezer repair, and what should homeowners do when they notice these signs?</h3>
+          <h3>
+            What are some signs that indicate a need for immediate freezer
+            repair, and what should homeowners do when they notice these signs?
+          </h3>
         </div>
 
         <div class="fa_plus">︾</div>
@@ -1580,14 +1624,32 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-          Key signs that your freezer needs immediate attention include unusual noises, frequent temperature fluctuations, and visible frost build-up beyond normal levels. If the freezer starts making loud humming or clicking noises, it could indicate a problem with the compressor or other mechanical components. Temperature inconsistency, where the freezer fails to maintain a stable temperature, can signal issues with the thermostat or coolant system. Excessive frost build-up may suggest a failing defrost motor or issues with the freezer's door seal.
+          Key signs that your freezer needs immediate attention include unusual
+          noises, frequent temperature fluctuations, and visible frost build-up
+          beyond normal levels. If the freezer starts making loud humming or
+          clicking noises, it could indicate a problem with the compressor or
+          other mechanical components. Temperature inconsistency, where the
+          freezer fails to maintain a stable temperature, can signal issues with
+          the thermostat or coolant system. Excessive frost build-up may suggest
+          a failing defrost motor or issues with the freezer's door seal.
         </p>
-        <p>When noticing any of these signs, homeowners should first check for simple solutions such as ensuring the freezer is not overloaded and that the door seals are clean and intact. If the problem persists, it's advisable to contact a professional appliance repair technician to diagnose and resolve the issue to prevent further damage or inefficiency that could lead to higher energy costs and spoiled food.</p>
+        <p>
+          When noticing any of these signs, homeowners should first check for
+          simple solutions such as ensuring the freezer is not overloaded and
+          that the door seals are clean and intact. If the problem persists,
+          it's advisable to contact a professional appliance repair technician
+          to diagnose and resolve the issue to prevent further damage or
+          inefficiency that could lead to higher energy costs and spoiled food.
+        </p>
       </div>
 
       <div class="FAQ">
         <div class="fa">
-          <h3>How do energy efficiency considerations affect the decision to repair or replace a freezer, and what financial incentives might influence this choice?</h3>
+          <h3>
+            How do energy efficiency considerations affect the decision to
+            repair or replace a freezer, and what financial incentives might
+            influence this choice?
+          </h3>
         </div>
 
         <div class="fa_plus">︾</div>
@@ -1597,15 +1659,34 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-          Energy efficiency is a critical factor in deciding whether to repair or replace a freezer. Older freezers generally consume more energy than newer models designed with advanced energy-saving technologies. Repairing an old freezer might not be the most cost-effective solution if it continues to incur high energy costs.
+          Energy efficiency is a critical factor in deciding whether to repair
+          or replace a freezer. Older freezers generally consume more energy
+          than newer models designed with advanced energy-saving technologies.
+          Repairing an old freezer might not be the most cost-effective solution
+          if it continues to incur high energy costs.
         </p>
-        <p>Homeowners should consider the potential energy savings from newer models, which could offset the initial expense of replacement over time. Additionally, many local utilities and government programs offer rebates and incentives for purchasing energy-efficient appliances, which can further reduce the net cost of an upgrade.</p>
-        <p>When evaluating the decision, compare the estimated energy costs of continuing to operate an old freezer versus the energy costs of a new model, taking into account any available incentives. This analysis will provide a clearer picture of the long-term savings and environmental benefits of upgrading to a more efficient appliance.</p>
+        <p>
+          Homeowners should consider the potential energy savings from newer
+          models, which could offset the initial expense of replacement over
+          time. Additionally, many local utilities and government programs offer
+          rebates and incentives for purchasing energy-efficient appliances,
+          which can further reduce the net cost of an upgrade.
+        </p>
+        <p>
+          When evaluating the decision, compare the estimated energy costs of
+          continuing to operate an old freezer versus the energy costs of a new
+          model, taking into account any available incentives. This analysis
+          will provide a clearer picture of the long-term savings and
+          environmental benefits of upgrading to a more efficient appliance.
+        </p>
       </div>
 
       <div class="FAQ">
         <div class="fa">
-          <h3>How much does it cost to repair the ice maker in an upright freezer, and how does this compare to typical fridge repair costs?</h3>
+          <h3>
+            How much does it cost to repair the ice maker in an upright freezer,
+            and how does this compare to typical fridge repair costs?
+          </h3>
         </div>
 
         <div class="fa_plus">︾</div>
@@ -1615,10 +1696,32 @@ import "css/price/style_price.css";
 
       <div class="questions">
         <p>
-         Repairing an ice maker in an upright freezer can vary in cost depending on the nature of the problem and the model of the freezer. Generally, the cost to fix an ice maker can range from relatively affordable minor repairs to more costly replacements of major components. For an upright freezer, you might expect to pay anywhere from $100 to $400. This variation in cost depends on whether the issue is with the electrical components, water supply lines, or the ice-making mechanism itself.
+          Repairing an ice maker in an upright freezer can vary in cost
+          depending on the nature of the problem and the model of the freezer.
+          Generally, the cost to fix an ice maker can range from relatively
+          affordable minor repairs to more costly replacements of major
+          components. For an upright freezer, you might expect to pay anywhere
+          from $100 to $400. This variation in cost depends on whether the issue
+          is with the electrical components, water supply lines, or the
+          ice-making mechanism itself.
         </p>
-        <p>Comparatively, fridge repair costs can cover a wide spectrum but are often in a similar range. However, repairs related to the refrigerator's cooling system or electronic control panels might be more expensive than those for an ice maker. When considering how much it costs to repair a fridge versus an upright freezer's ice maker, it's important to also consider the age and efficiency of the appliance, as newer models might be more cost-effective to repair due to the availability of parts and improved energy efficiency.</p>
-        <p>In both cases, evaluating how much it costs to repair these issues is crucial. If the cost approaches or exceeds half the price of replacing the appliance with a new model, it might be more economical to invest in a new appliance. This decision should also consider the potential energy savings and enhanced features of newer models.</p>
+        <p>
+          Comparatively, fridge repair costs can cover a wide spectrum but are
+          often in a similar range. However, repairs related to the
+          refrigerator's cooling system or electronic control panels might be
+          more expensive than those for an ice maker. When considering how much
+          it costs to repair a fridge versus an upright freezer's ice maker,
+          it's important to also consider the age and efficiency of the
+          appliance, as newer models might be more cost-effective to repair due
+          to the availability of parts and improved energy efficiency.
+        </p>
+        <p>
+          In both cases, evaluating how much it costs to repair these issues is
+          crucial. If the cost approaches or exceeds half the price of replacing
+          the appliance with a new model, it might be more economical to invest
+          in a new appliance. This decision should also consider the potential
+          energy savings and enhanced features of newer models.
+        </p>
       </div>
 
       <div class="FAQ_bottom"></div>
