--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -15,6 +15,8 @@ html {
     scroll-behavior: smooth;
 }
 
+
+
 body {
     /* max-width: 1920px; */
     width: 100%;
@@ -227,14 +229,6 @@ button.hcp-button:hover {
     align-self: center;
 }
 
-.header-licenses-foto {
-    display: none;
-}
-
-.header-licenses-foto img {
-    margin: 3px 5px;
-}
-
 .logo-header img {
     max-width: 244px;
     transition: 0.25s;
@@ -389,7 +383,24 @@ button.hcp-button:hover {
 
 
 
+@media (max-width:768px) {
+
+    h1 {
+        font-size: clamp(42px, 8vw, 60px) !important;
+        line-height: clamp(56px, 8vh, 60px) !important;
+    }
+
+    .animate-charcter {
+        font-size: clamp(42px, 8vw, 60px) !important;
+        line-height: clamp(56px, 8vh, 60px) !important;
+    }
+}
+
+
+
+
 @media (max-width:400px) {
+
     .call-header-1024 a {
         width: 100%;
         max-width: 300px;
@@ -400,24 +411,7 @@ button.hcp-button:hover {
         display: grid;
 
     }
-}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:400px) {
     .hover\:bg-gray-200 {
         padding: 9px 4px !important;
         width: 216px !important;
