--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -3,55 +3,59 @@ import "@components/css-components/reviews.css";
 ---
 
 <div class="reviews reviews-header">
-  <p>
-    <a href="#reviews"
-      ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
-      (Google Rating)<a><a href="#reviews">(Thumbtack Rating)</a> </a>
-    </a>
-  </p>
-<!-- <div class="header-licenses-foto">
-<div>
-  <img
-    src="/images/same-day-appliance-repair-licensed.webp"
-    width="130"
-    height="90"
-  />
+  <div class="reviews-content">
+    <p>
+      <a href="#reviews"
+        ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
+        (Google Rating) (Thumbtack Rating)
+      </a>
+    </p>
+
+    <div class="header-licenses-foto">
+      <div>
+        <img
+          src="/images/same-day-appliance-repair-licensed.webp"
+          width="130"
+          height="90"
+        />
+      </div>
+      <div>
+        <img
+          src="/images/same-day-appliance-repair-insured.webp"
+          width="112"
+          height="90"
+        />
+      </div>
+      <div>
+        <img
+          src="/images/same-day-appliance-repair-epa-certified.webp"
+          width="165"
+          height="90"
+        />
+      </div>
+      <div>
+        <img
+          src="/images/same-day-appliance-repair-osha-trained.webp"
+          width="98"
+          height="90"
+        />
+      </div>
+      <div>
+        <img
+          style="border-radius:45px;"
+          src="/images/same-day-applaince-repair-nate-certified.webp"
+          width="90"
+          height="90"
+        />
+      </div>
+      <div>
+        <img
+          style="border-radius:10px;"
+          src="/images/same-day-appliance-repair-background-checked.webp"
+          width="100"
+          height="90"
+        />
+      </div>
+    </div>
+  </div>
 </div>
-<div>
-  <img
-    src="/images/same-day-appliance-repair-insured.webp"
-    width="112"
-    height="90"
-  />
-</div>
-<div>
-  <img
-    src="/images/same-day-appliance-repair-epa-certified.webp"
-    width="165"
-    height="90"
-  />
-</div>
-<div>
-  <img
-    src="/images/same-day-appliance-repair-osha-trained.webp"
-    width="98"
-    height="90"
-  />
-</div>
-<div>
-  <img
-    style="border-radius:45px;"
-    src="/images/same-day-applaince-repair-nate-certified.webp"
-    width="90"
-    height="90"
-  />
-</div>
-<div>
-  <img
-    style="border-radius:10px;"
-    src="/images/same-day-appliance-repair-background-checked.webp"
-    width="100"
-    height="90"
-  />
-</div>-->
-</div> </div>
