--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1014,6 +1014,6 @@ import "css/style-index.css";
       </div>
     </div>
   </div>
-  </Layout>
-  <Cta />
-
+  <p>что то</p>
+</Layout>
+<Cta />
