--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -88,12 +88,23 @@ import "css/price/style_price.css";
       </div>
 
       <div class="pricing-policy">
-        <div class="head_pricing-policy">
-          <h2>Our Pricing Policy For Dryer Repair And How We Work</h2>
-          <p>
-            There are four costs to consider when making your dryer work
-            optimally.
-          </p>
+        <div class="head_pricing-policy head_pricing-policy_foto">
+          <div class="head_pricing-policy_foto-a">
+            <h2>Our Pricing Policy For Dryer Repair And How We Work</h2>
+            <p>
+              There are four costs to consider when making your dryer work
+              optimally.
+            </p>
+          </div>
+          <div class="head_pricing-policy_foto-b">
+            <img
+              loading="lazy"
+              width="500px"
+              height="500px"
+              src="/dryer-repair/dryer-repair-2.webp"
+              alt="dryer repair cost near me"
+            />
+          </div>
         </div>
 
         <div class="content_pricing-policy">
@@ -316,12 +327,24 @@ import "css/price/style_price.css";
       <Btn />
 
       <div class="job-prices" id="labor-cost-anchor">
-        <div class="head-prices">
-          <h2>Dryer Repair Cost - Labor Only Excluding Parts</h2>
-          <p>
-            Here are the common problems and associated dryer repair costs in
-            Los Angeles:
-          </p>
+        <div class="head_pricing-policy head_pricing-policy_foto">
+          <div class="head_pricing-policy_foto-b">
+            <img
+              loading="lazy"
+              width="600px"
+              height="500px"
+              src="/dryer-repair/dryer-repair-3.webp"
+              alt="electric dryer repair cost"
+            />
+          </div>
+
+          <div class="head_pricing-policy_foto-a">
+            <h2>Dryer Repair Cost - Labor Only Excluding Parts</h2>
+            <p>
+              Here are the common problems and associated dryer repair costs in
+              Los Angeles:
+            </p>
+          </div>
         </div>
 
         <div class="content_job-prices" id="col-prices">
@@ -608,13 +631,24 @@ import "css/price/style_price.css";
       <Btn />
 
       <div class="job-prices" id="parts-cost-anchor">
-        <div class="head-prices">
-          <h2>Dryer Replacement Parts Costs</h2>
-          <p>
-            Dryer replacement parts costs can vary depending on your dryer's
-            specific part, brand, and model. Here’s a ballpark range for some
-            common dryer parts:
-          </p>
+        <div class="head_pricing-policy head_pricing-policy_foto">
+          <div class="head_pricing-policy_foto-a">
+            <h2>Dryer Replacement Parts Costs</h2>
+            <p>
+              Dryer replacement parts costs can vary depending on your dryer's
+              specific part, brand, and model. Here’s a ballpark range for some
+              common dryer parts:
+            </p>
+          </div>
+          <div class="head_pricing-policy_foto-b">
+            <img
+              loading="lazy"
+              width="600px"
+              height="500px"
+              src="/dryer-repair/dryer-repair-4.webp"
+              alt="gas dryer repair cost"
+            />
+          </div>
         </div>
 
         <div class="content_job-prices content_job-prices-h-m" id="col-prices">
@@ -709,32 +743,115 @@ import "css/price/style_price.css";
         </div>
       </div>
 
-      <h2>Ways to Save Money on Dryer Repair</h2>
-      <p>
-        <b>Timely maintenance</b> - timely maintenance can save you money on unnecessary
-        dryer repairs and increase your appliance’s longevity. We charge a flat fee
-        of $80 for the dryer maintenance service.
-      </p>
-      <p>
-        Dryer maintenance includes checking drum and door seals for damage,
-        lubricating moving parts, tightening electrical connections, testing
-        thermostat and heating element, checking the exhaust hood. These tasks
-        help catch small issues before they become costly problems and ensure
-        efficient and safe operation to preserve food quality.
-      </p>
-      <p>
-        Comparing the cost-effectiveness of dryer repairs to other appliances,
-        such as garbage disposals, highlights potential savings. Garbage
-        disposal repairs cost typically ranges between $100 and $275, with
-        simple jams being the least expensive to fix. This comparison
-        underscores the value of opting for repairs over replacements for
-        various appliances, including dryers.
-      </p>
-      <p>
-        <b>Find a company that provides a warranty.</b> At the Same Day Appliance
-        Repair, we provide up to three months of warranty.
-      </p>
+      <div class="maintenance">
+        <div class="head_pricing-policy head_pricing-policy_foto">
+          <div class="head_pricing-policy_foto-b">
+            <img
+              loading="lazy"
+              width="600px"
+              height="500px"
+              src="/dryer-repair/dryer-repair-5.webp"
+              alt="dryer repair cost heating element"
+            />
+          </div>
 
+          <div class="head_pricing-policy_foto-a">
+            <h2>Ways to Save Money on Dryer Repair</h2>
+          </div>
+        </div>
+
+        <div class="description_maintenance">
+          <div class="conclusion-description_maintenance">
+            <div class="head_description_maintenance">
+              <svg
+                fill="#000000"
+                width="37px"
+                height="37px"
+                viewBox="0 0 1024 1024"
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon">
+                <path
+                  d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0 0 26 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
+                ></path>
+              </svg>
+              <p><b>Find a company that provides a warranty</b></p>
+            </div>
+            <p>
+              - At the Same Day Appliance Repair, we provide up to three months
+              of warranty.
+            </p>
+          </div>
+
+          <div class="conclusion-description_maintenance">
+            <div class="head_description_maintenance">
+              <svg
+                fill="#000000"
+                height="35px"
+                width="35px"
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 296.999 296.999"
+                xml:space="preserve">
+                <g>
+                  <g>
+                    <g>
+                      <path
+                        d="M169.197,43.09H18.808c-7.176,0-13.014,5.838-13.014,13.014v227.444c0,7.176,5.838,13.014,13.014,13.014h150.389
+				c7.176,0,13.014-5.838,13.014-13.014V56.105C182.211,48.928,176.373,43.09,169.197,43.09z M151.794,274.258H36.21
+				c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
+				S156.273,274.258,151.794,274.258z M151.794,235.73H36.21c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584
+				c4.479,0,8.111,3.632,8.111,8.111C159.905,232.098,156.273,235.73,151.794,235.73z M151.794,197.202H36.21
+				c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
+				S156.273,197.202,151.794,197.202z M151.794,158.674H36.21c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584
+				c4.479,0,8.111,3.632,8.111,8.111S156.273,158.674,151.794,158.674z M151.794,120.146H36.21c-4.479,0-8.111-3.632-8.111-8.111
+				s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111S156.273,120.146,151.794,120.146z M151.794,81.618H36.21
+				c-4.479,0-8.111-3.632-8.111-8.111c0-4.479,3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
+				C159.905,77.986,156.273,81.618,151.794,81.618z"
+                      ></path>
+                      <path
+                        d="M213.642,0H57.336c-7.177,0-13.014,5.838-13.014,13.014v13.854h124.875c16.121,0,29.237,13.115,29.237,29.237v201.931
+				h15.208c7.176,0,13.014-5.838,13.014-13.014V13.014C226.656,5.838,220.818,0,213.642,0z"
+                      ></path>
+                      <path
+                        d="M291.205,23.324C291.204,10.464,281.88,0,270.42,0c-11.461,0-20.785,10.464-20.785,23.324v13.584h41.57V23.324z"
+                      ></path>
+                      <path
+                        d="M249.635,53.13v214.537h0c0,1.2,0.342,2.373,0.983,3.371l14.921,23.249c1.087,1.694,2.919,2.712,4.881,2.712
+				c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.371V53.13H249.635z"
+                      ></path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <p><b>Timely maintenance</b></p>
+            </div>
+
+            <p>
+              - timely maintenance can save you money on unnecessary dryer
+              repairs and increase your appliance’s longevity. We charge a flat
+              fee of $80 for the dryer maintenance service.
+            </p>
+            <p>
+              - Dryer maintenance includes checking drum and door seals for
+              damage, lubricating moving parts, tightening electrical
+              connections, testing thermostat and heating element, checking the
+              exhaust hood. These tasks help catch small issues before they
+              become costly problems and ensure efficient and safe operation to
+              preserve food quality.
+            </p>
+            <p>
+              - Comparing the cost-effectiveness of dryer repairs to other
+              appliances, such as garbage disposals, highlights potential
+              savings. Garbage disposal repairs cost typically ranges between
+              $100 and $275, with simple jams being the least expensive to fix.
+              This comparison underscores the value of opting for repairs over
+              replacements for various appliances, including dryers.
+            </p>
+          </div>
+        </div>
+      </div>
       <Btn />
 
       <div class="faq-full" id="faqs-anchor">
@@ -793,6 +910,13 @@ import "css/price/style_price.css";
             <b>Dryer Won't Shut Off:</b> A malfunctioning timer or control panel
             may cause the dryer to continue running even after the cycle is complete.
           </p>
+          <img
+            src="/dryer-repair/dryer-repair-6.webp"
+            loading="lazy"
+            width="600px"
+            height="800px"
+            alt="labor cost to replace dryer belt"
+          />
         </div>
 
         <div class="FAQ">
@@ -841,6 +965,13 @@ import "css/price/style_price.css";
             and preventing major problems through regular maintenance, you can minimize
             the risk of unexpected breakdowns and inconvenience.
           </p>
+          <img
+            src="/dryer-repair/dryer-repair-7.webp"
+            loading="lazy"
+            width="600px"
+            height="800px"
+            alt="labor cost for dryer repair"
+          />
         </div>
 
         <div class="FAQ">
@@ -918,6 +1049,13 @@ import "css/price/style_price.css";
             motor, or any other dryer problem, you can count on us to provide
             efficient and reliable repairs when you need them most.
           </p>
+          <img
+            src="/dryer-repair/dryer-repair-8.webp"
+            loading="lazy"
+            width="600px"
+            height="700px"
+            alt="dryer repair cost estimator"
+          />
         </div>
 
         <div class="FAQ">
@@ -1649,7 +1787,6 @@ import "css/price/style_price.css";
         <div class="FAQ_bottom"></div>
       </div>
     </main>
-
   </Container>
 </Layout>
 <Cta />
