--- a/src/pages/price-list/freezer-repair-cost.astro
+++ b/src/pages/price-list/freezer-repair-cost.astro
@@ -370,7 +370,7 @@ import "css/price/style_price.css";
                 freezer may not maintain the desired temperature.
               </p></a
             >
-            <p>Freezer Evaporator Fan replacement cos.</p>
+            <p>Freezer Evaporator Fan replacement cost.</p>
           </div>
 
           <div class="money_job-prices">
