--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -350,13 +350,12 @@ import "css/price/style_price.css";
               ><p>
                 The compressor is the heart of your refrigerator's cooling
                 system. A failing compressor is a significant issue and one of
-                the most expensive repairs.
+                the most expensive repairs. The refrigerator is not cooling,
+                making unusual or excessive noise, or starting and stopping
+                frequently.
               </p></a
             >
-            <p>
-              The refrigerator is not cooling, making unusual or excessive
-              noise, or starting and stopping frequently.
-            </p>
+            <p>Refrigerator compressor replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -370,13 +369,11 @@ import "css/price/style_price.css";
               ><p>
                 The thermostat controls the temperature inside the refrigerator.
                 If it fails, it might not trigger the cooling process
-                effectively.
+                effectively. Fridge or freezer section is too warm or too cold,
+                temperature fluctuations.
               </p></a
             >
-            <p>
-              Fridge or freezer section is too warm or too cold, temperature
-              fluctuations.
-            </p>
+            <p>Refrigerator thermostat replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -390,13 +387,11 @@ import "css/price/style_price.css";
               ><p>
                 The evaporator fan circulates cold air from the freezer to the
                 fridge compartment. If this fan fails, the fridge may not cool
-                adequately.
+                adequately. Poor cooling in the fridge section but freezer works
+                fine, noisy operation.
               </p></a
             >
-            <p>
-              Poor cooling in the fridge section but freezer works fine, noisy
-              operation.
-            </p>
+            <p>Refrigerator evaporator fan replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -410,11 +405,10 @@ import "css/price/style_price.css";
               ><p>
                 The condenser fan cools the compressor and condenser coils. If
                 it's not working, the fridge can overheat or stop cooling.
+                Refrigerator overheating, loud noise from the refrigerator back.
               </p></a
             >
-            <p>
-              Refrigerator overheating, loud noise from the refrigerator back.
-            </p>
+            <p>Refrigerator condenser fan replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -428,13 +422,11 @@ import "css/price/style_price.css";
               ><p>
                 The defrost heater prevents frost from accumulating in the
                 freezer. Failure can lead to a build-up of ice and affect
-                cooling.
+                cooling. Frost buildup in the freezer, freezer works but fridge
+                section is warm.
               </p></a
             >
-            <p>
-              Frost buildup in the freezer, freezer works but fridge section is
-              warm.
-            </p>
+            <p>Refrigerator heater replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -448,9 +440,10 @@ import "css/price/style_price.css";
               ><p>
                 A damaged door seal can allow cool air to escape, making your
                 fridge work harder and increasing energy consumption.
+                Condensation or frost buildup near the door, energy waste.
               </p></a
             >
-            <p>Condensation or frost buildup near the door, energy waste.</p>
+            <p>Refrigerator door seal replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -463,10 +456,11 @@ import "css/price/style_price.css";
             <a href="#"
               ><p>
                 This valve opens to supply water to the refrigerator's ice maker
-                and dispenser. If it fails, these features won't work.
+                and dispenser. If it fails, these features won't work. Ice maker
+                not making ice, water dispenser not working.
               </p></a
             >
-            <p>Ice maker not making ice, water dispenser not working.</p>
+            <p>Refrigerator valve replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -480,13 +474,12 @@ import "css/price/style_price.css";
               ><p>
                 The control board is the refrigerator's brain, directing
                 electrical power to various components. Malfunctions here can
-                affect many aspects of operation.
+                affect many aspects of operation. The fridge is not running
+                cycles properly, and the erratic behavior of the fridge
+                functions.
               </p></a
             >
-            <p>
-              The fridge is not running cycles properly, and the erratic
-              behavior of the fridge functions.
-            </p>
+            <p>Refrigerator control panel replacement cost</p>
           </div>
 
           <div class="money_job-prices">
@@ -1488,7 +1481,6 @@ import "css/price/style_price.css";
       <div class="FAQ_bottom"></div>
     </div>
     <Btn />
-
   </Container>
 </Layout>
 <Cta />
