--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -423,13 +423,13 @@ import "css/style-index.css";
                 <div class="f-content-machinery">
                   <img
                     loading="lazy"
-                    src="images/commercial-dishwasher-repair.webp"
+                    src="/../images/commercial-washer-repair.webp"
                     alt="Same day commercial washer repair - Los Angeles"
                   />
                 </div>
 
                 <div class="d-content-machinery">
-                  <p>Dishwasher Repair</p>
+                  <p>Washer Repair</p>
                 </div>
 
                 <div class="but-content-machinery">
@@ -1008,12 +1008,11 @@ import "css/style-index.css";
             diagnose the issue with your appliance. Often, what a customer
             assumes to be the problem can turn out to be something completely
             different, ranging from a basic issue like a malfunctioning outlet
-            to more complex problems like a faulty compressor.  
+            to more complex problems like a faulty compressor.
           </p>
         </div>
       </div>
     </div>
   </div>
-
 </Layout>
 <Cta />
