--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -8,6 +8,7 @@ import Layout from "@layouts/Layout.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import Btn from "@components/btn.astro";
 import Unitscommercial from "@components/units-commercial-equipment-los-angeles.astro";
 import Unitsappliances from "@components/units-appliances-los-angeles.astro";
 import Unitsheatventcondit from "@components/units-heating-ventilation-air-conditioning.astro";
@@ -200,7 +201,9 @@ import "css/service-areas/style-service-areas.css";
 
       <!--  коммерческая техника -->
 
-      <div class="full-commercial-machinery" id="full-commercial-machinery-nocolor">
+      <div
+        class="full-commercial-machinery"
+        id="full-commercial-machinery-nocolor">
         <div class="full-commercial-machinery-1920">
           <div class="header-machinery">
             <h2>Commercial Appliance Repairs for Businesses</h2>
@@ -230,6 +233,7 @@ import "css/service-areas/style-service-areas.css";
           <Unitsheatventcondit />
         </div>
       </div>
+      <Btn />
 
       <h2>Addressing Common Appliance Concerns in Los Angeles</h2>
       <p>
