--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -6,15 +6,18 @@ import "@components/css-components/footer-cta.css";
 ---
 
 <!--Reviews -->
-<div id="reviews"><br><br><br></div><br><br><br><br><br></div>
+<div id="reviews"><br /><br /><br /></div><br /><br /><br /><br /><br />
 <Btn />
-<h2>
-  Real Customer Reviews From Our Google and<a
+
+<div class="thumbtack-profile">
+  <h2>
+    Real Customer Reviews From Our Google and <a
     href="https://www.thumbtack.com/ca/los-angeles/dishwasher-installation/same-day-appliance-repair/service/474673684619198464"
     title="Thumbtack Reviews"
-    target="_blank">Thumbtack Profile</a
-  >
-</h2>
+    target="_blank"> Thumbtack Profile</a
+    >
+  </h2>
+</div>
 
 <div class="feedback">
   <!-- скрипт отзывов грузит страницу на 17кб -->
@@ -74,7 +77,6 @@ import "@components/css-components/footer-cta.css";
   title="Same Day APpliance Repair - areas we serve"
   src="https://www.google.com/maps/d/u/2/embed?mid=1WYfJlezd7yel0cIXNhjCrg5PrRJVxh0&ehbc=2E312F"
   style="border:0;"></iframe>
-
 
 <footer>
   <div class="full-footer">
