--- a/src/components/css-components/footer-cta.css
+++ b/src/components/css-components/footer-cta.css
@@ -14,6 +14,15 @@ h2 {
     color: #000;
 }
 
+.thumbtack-profile a {
+    color: #000;
+}
+
+.thumbtack-profile:hover a {
+    text-decoration: underline;
+    text-decoration-color: #767676;
+    text-decoration-thickness: 2px;
+}
 
 
 
